--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.TestContextActivity"></activity>
+        <service
+            android:name=".service.SyncService"
+            android:enabled="true"
+            android:exported="false"></service>
+
+        <activity android:name=".activity.TestContextActivity" />
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.VideosActivity" />
         <activity android:name=".activity.ImagesActivity" />
