--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <service
+            android:name=".service.NotificationService"
+            android:enabled="true"
+            android:exported="false"></service>
         <service
             android:name=".service.SyncService"
             android:enabled="true"
@@ -23,9 +26,10 @@
 
         <activity android:name=".activity.TestContextActivity" />
         <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.TravelsActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".activity.TravelsActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
